// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ListRow /> renders List Row with colored date correctly 1`] = `
.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-sizing: border-box;
  margin-left: -8px;
  margin-right: -8px;
}

.c10 .c10 {
  -webkit-flex: 0 1 100%;
  -ms-flex: 0 1 100%;
  flex: 0 1 100%;
  margin-left: 0;
  margin-right: 0;
}

.c12 {
  box-sizing: border-box;
  padding-right: 8px;
  padding-left: 8px;
  max-width: 100%;
  -webkit-flex: 0 0 100%;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
}

.c16 {
  box-sizing: border-box;
  padding-right: 8px;
  padding-left: 8px;
  max-width: 100%;
  -webkit-flex: 0 0 100%;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
}

.c14 {
  font-size: 14px;
  color: rgba(38,38,38,1);
}

.c9 {
  font-size: 14px;
  color: rgba(38,38,38,0.6);
}

.c7 {
  font-size: 14px;
  color: #1F262D;
  font-weight: 600;
}

.c4 {
  height: 36px;
  width: 100%;
  min-width: 100px;
  font-weight: 600;
  text-align: center;
  border-radius: 2px;
  color: rgba(255,255,255,1);
  background-color: transparent;
  border: 1px solid rgba(255,255,255,1);
  cursor: pointer;
  text-transform: capitalize;
  font-size: 14px;
  min-width: 45px;
  max-width: 45px;
  height: 45px;
  width: 45px;
}

.c4:disabled {
  color: rgba(255,255,255,0.5);
  background-color: transparent;
  border: 1px solid rgba(255,255,255,0.5);
  cursor: not-allowed;
}

.c4:focus {
  outline: none;
}

.c4 > * {
  pointer-events: none;
}

.c20 {
  height: 36px;
  width: 100%;
  min-width: 100px;
  font-weight: 600;
  text-align: center;
  border-radius: 2px;
  color: rgba(255,255,255,1);
  background-color: transparent;
  border: 1px solid rgba(255,255,255,1);
  cursor: pointer;
  text-transform: capitalize;
  font-size: 14px;
  min-width: 35px;
  max-width: 35px;
  height: 35px;
  width: 35px;
}

.c20:disabled {
  color: rgba(255,255,255,0.5);
  background-color: transparent;
  border: 1px solid rgba(255,255,255,0.5);
  cursor: not-allowed;
}

.c20:focus {
  outline: none;
}

.c20 > * {
  pointer-events: none;
}

.c1 {
  background-color: rgba(255,255,255,1);
}

.c1:not(:last-of-type) {
  border-bottom: 0.5px solid #E0E0E0;
}

.c2 {
  background-color: rgba(255,255,255,1);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 8px;
}

.c3 {
  display: none;
}

.c5 {
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: horizontal;
  -webkit-justify-content: horizontal;
  -ms-flex-pack: horizontal;
  justify-content: horizontal;
  overflow: hidden;
  width: 100%;
  cursor: pointer;
  padding-top: 8px;
  padding-bottom: 8px;
  border-radius: 2px;
  margin: 12px 0 12px 0;
}

.c6 {
  min-width: 101px;
  max-width: 116px;
  padding-left: 8px;
}

.c15 {
  display: none;
}

.c18 {
  font-weight: 600;
  font-size: 14px;
  line-height: 2.43;
  width: 100%;
  padding: 0 12px 0 12px;
  min-width: 60px;
  text-align: center;
  text-transform: capitalize;
  border-radius: 2px;
  cursor: pointer;
  color: rgba(255,255,255,1);
  background-color: #026cdf;
  border: 1px solid transparent;
  -webkit-transition: -webkit-transform 0.1s linear;
  -webkit-transition: transform 0.1s linear;
  transition: transform 0.1s linear;
  -webkit-transition: background-color 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: background-color 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  min-width: 100px;
  max-width: 102px;
  height: 36px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  line-height: 1.4;
  padding: 18px 0 18px 0;
}

.c18:focus {
  outline: none;
  box-shadow: 0 0 5px 0 #026cdf;
}

.c18:hover {
  background-color: #0150a7;
}

.c18:active {
  -webkit-transform: scale(0.98,0.98) translate(0,1px);
  -ms-transform: scale(0.98,0.98) translate(0,1px);
  transform: scale(0.98,0.98) translate(0,1px);
  background-color: #013670;
}

.c18:disabled {
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  color: rgba(255,255,255,1);
  background-color: #026cdf;
  border: 1px solid transparent;
  cursor: not-allowed;
  opacity: 0.2;
}

.c21 {
  max-height: 0;
  overflow: hidden;
}

.c17 {
  display: none;
  padding-left: 16px;
  padding-right: 8px;
}

.c13 {
  display: -webkit-box;
  overflow: hidden;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
}

.c8 {
  display: -webkit-box;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
  overflow: hidden;
}

.c0 {
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
}

@media screen and (min-width:768px) {
  .c10 {
    margin-left: -12px;
    margin-right: -12px;
  }
}

@media screen and (min-width:768px) {
  .c12 {
    max-width: 100%;
    padding-right: 12px;
    padding-left: 12px;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

@media screen and (min-width:1024px) {
  .c12 {
    max-width: 100%;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

@media screen and (min-width:1440px) {
  .c12 {
    max-width: 100%;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

@media screen and (min-width:768px) {
  .c16 {
    max-width: 50%;
    padding-right: 12px;
    padding-left: 12px;
    -webkit-flex: 0 0 50%;
    -ms-flex: 0 0 50%;
    flex: 0 0 50%;
  }
}

@media screen and (min-width:1024px) {
  .c16 {
    max-width: 50%;
    -webkit-flex: 0 0 50%;
    -ms-flex: 0 0 50%;
    flex: 0 0 50%;
  }
}

@media screen and (min-width:1440px) {
  .c16 {
    max-width: 50%;
    -webkit-flex: 0 0 50%;
    -ms-flex: 0 0 50%;
    flex: 0 0 50%;
  }
}

@media only screen and (min-width:480px) {
  .c14 {
    font-size: 16px;
  }
}

@media only screen and (min-width:480px) {
  .c7 {
    font-size: 12px;
  }
}

@media screen and (min-width:768px) {
  .c1 {
    border-radius: 4px;
  }

  .c1.row__wrapper--expanded {
    -webkit-transition: box-shadow 0.3s cubic-bezier(0.455,0.03,0.515,0.955),margin-bottom 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
    transition: box-shadow 0.3s cubic-bezier(0.455,0.03,0.515,0.955),margin-bottom 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.01),0 4px 10px 0 rgba(0,0,0,0.19);
    margin-bottom: 12px;
  }

  .c1.row__wrapper--collapsed {
    -webkit-transition: box-shadow 0.3s cubic-bezier(0.55,0.085,0.68,0.53),margin-bottom 0.3s cubic-bezier(0.55,0.085,0.68,0.53);
    transition: box-shadow 0.3s cubic-bezier(0.55,0.085,0.68,0.53),margin-bottom 0.3s cubic-bezier(0.55,0.085,0.68,0.53);
    box-shadow: 0;
    margin-bottom: 0;
  }
}

@media screen and (min-width:768px) {
  .c3 {
    display: block;
  }

  .c3.button--expanded,
  .c3.button--collapsed {
    -webkit-transition: all 0.1s linear;
    transition: all 0.1s linear;
  }

  .c3.button--expanded {
    -webkit-transform: rotate(-180deg);
    -ms-transform: rotate(-180deg);
    transform: rotate(-180deg);
  }
}

@media screen and (min-width:768px) {
  .c5 {
    margin: 18px 0 18px 0;
  }

  .c5:hover {
    background-color: rgba(2,108,223,0.2);
  }
}

@media screen and (min-width:768px) {
  .c15 {
    position: relative;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }

  .c15.column__content--expanded {
    -webkit-transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
    transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
    opacity: 0;
  }

  .c15.column__content--collapsed {
    -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955) 0.2s;
    transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955) 0.2s;
    opacity: 1;
  }
}

@media screen and (min-width:768px) {
  .c11 {
    display: none;
  }
}

@media screen and (min-width:768px) {
  .c21 {
    border-top: 0.5px solid #E0E0E0;
  }

  .c21.container__overflow--expanded {
    background-color: rgba(255,255,255,1);
    max-height: 600px;
    -webkit-transition: max-height 0.3s cubic-bezier(0.455,0.03,0.515,0.955),opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955) 0.2s;
    transition: max-height 0.3s cubic-bezier(0.455,0.03,0.515,0.955),opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955) 0.2s;
    opacity: 1;
  }

  .c21.container__overflow--collapsed {
    -webkit-transition: max-height 0.3s cubic-bezier(0.55,0.085,0.68,0.53),opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
    transition: max-height 0.3s cubic-bezier(0.55,0.085,0.68,0.53),opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
    opacity: 0;
  }
}

@media screen and (min-width:768px) {
  .c17 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media screen and (min-width:768px) {
  .c19 {
    display: none;
  }
}

@media screen and (min-width:768px) {
  .c13.subtitle--hidden {
    position: absolute;
    -webkit-transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
    transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
    opacity: 0;
  }

  .c13.subtitle--active {
    -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955) 0.2s;
    transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955) 0.2s;
    opacity: 1;
  }

  .c13.subtitle--expanded {
    -webkit-transform: translateX(-55%);
    -ms-transform: translateX(-55%);
    transform: translateX(-55%);
  }
}

<div
  className="c0"
  onClick={[Function]}
>
  <div
    className="row__wrapper row__wrapper--collapsed c1"
  >
    <div
      className="c2"
    >
      <button
        aria-expanded={false}
        aria-label="Expand Row"
        className="button--expand-or-collapse button--collapsed c3 c4"
        data-index={0}
        role="button"
        size={45}
      >
        <svg
          fill="#1F262D"
          height={15}
          style={Object {}}
          viewBox="0 0 15 7"
          width={15}
        >
          <path
            d="M13.974.132a.614.614 0 0 0-.762 0L7.17 5.341 1.12.132C.916-.044.563-.037.376.125a.398.398 0 0 0-.167.332c0 .058.012.116.036.17a.385.385 0 0 0 .12.155l6.427 5.54a.568.568 0 0 0 .378.135.568.568 0 0 0 .377-.135l6.427-5.54a.422.422 0 0 0 .156-.325.42.42 0 0 0-.156-.325z"
          />
        </svg>
      </button>
      <a
        aria-label="See Tickets"
        className="c5"
        href="/"
        onClick={[Function]}
        role="link"
      >
        <div
          className="c6"
        >
          <div
            className="date--text c7"
            color="#1F262D"
            style={
              Object {
                "textTransform": "uppercase",
              }
            }
          >
            apr 23
          </div>
          <div
            className="day-time--text c8 c9"
          >
            Thu, 8:00 PM
          </div>
        </div>
        <div
          className="c10"
          style={
            Object {
              "width": "100%",
            }
          }
        >
          <div
            className="c11 c12"
          >
            <div
              className="list-row--title c13 c14"
            >
              Del Mar Fairgrounds
            </div>
            <div
              className="list-row--subtitle c8 c9"
            >
              KABOO 3-Day Pass
            </div>
          </div>
          <div
            className="column__content list-row--title column__content--collapsed c15 c16"
          >
            <div
              className="c13 c14"
            >
              Del Mar Fairgrounds
            </div>
          </div>
          <div
            className="c15 c16"
          >
            <div
              className="subtitle list-row--subtitle subtitle--active c13 c14"
            >
              KABOO 3-Day Pass
            </div>
            <div
              className="subtitle subtitle--expanded subtitle--hidden c13 c14"
            >
              KABOO 3-Day Pass
            </div>
          </div>
        </div>
        <div
          className="c17"
        >
          <span
            aria-label="See Tickets"
            className="c18"
            onClick={[Function]}
            role="button"
            size="regular"
            width="102px"
          >
            See Tickets
          </span>
        </div>
      </a>
      <div
        className="c19"
      >
        <button
          aria-label="More Info"
          className="button--more-info c20"
          data-index={0}
          onClick={[Function]}
          role="button"
          size={35}
        >
          <svg
            fill="rgba(38, 38, 38, 0.6)"
            height={22}
            viewBox="0 0 5 21"
            width={22}
          >
            <path
              d="M0 2.5C0 1.81.242 1.22.727.732A2.394 2.394 0 0 1 2.492 0a2.42 2.42 0 0 1 1.773.732C4.755 1.221 5 1.81 5 2.5s-.245 1.28-.735 1.768A2.42 2.42 0 0 1 2.492 5C1.8 5 1.212 4.756.727 4.268A2.418 2.418 0 0 1 0 2.5zm0 8.008c0-.692.242-1.283.727-1.773A2.39 2.39 0 0 1 2.492 8c.692 0 1.283.245 1.773.735S5 9.815 5 10.508a2.39 2.39 0 0 1-.735 1.765A2.43 2.43 0 0 1 2.492 13c-.692 0-1.28-.242-1.765-.727A2.403 2.403 0 0 1 0 10.508zM0 18.5c0-.69.242-1.28.727-1.768A2.394 2.394 0 0 1 2.492 16a2.42 2.42 0 0 1 1.773.732c.49.489.735 1.078.735 1.768s-.245 1.28-.735 1.768A2.42 2.42 0 0 1 2.492 21c-.692 0-1.28-.244-1.765-.732A2.418 2.418 0 0 1 0 18.5z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      className="container__overflow container__overflow--collapsed c21 c12"
    />
  </div>
</div>
`;

exports[`<ListRow /> renders List Row with link correctly 1`] = `
.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-sizing: border-box;
  margin-left: -8px;
  margin-right: -8px;
}

.c10 .c10 {
  -webkit-flex: 0 1 100%;
  -ms-flex: 0 1 100%;
  flex: 0 1 100%;
  margin-left: 0;
  margin-right: 0;
}

.c12 {
  box-sizing: border-box;
  padding-right: 8px;
  padding-left: 8px;
  max-width: 100%;
  -webkit-flex: 0 0 100%;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
}

.c16 {
  box-sizing: border-box;
  padding-right: 8px;
  padding-left: 8px;
  max-width: 100%;
  -webkit-flex: 0 0 100%;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
}

.c22 {
  box-sizing: border-box;
  padding-right: 8px;
  padding-left: 8px;
  max-width: 75%;
  -webkit-flex: 0 0 75%;
  -ms-flex: 0 0 75%;
  flex: 0 0 75%;
}

.c24 {
  box-sizing: border-box;
  padding-right: 8px;
  padding-left: 8px;
  max-width: 25%;
  -webkit-flex: 0 0 25%;
  -ms-flex: 0 0 25%;
  flex: 0 0 25%;
}

.c14 {
  font-size: 14px;
  color: rgba(38,38,38,1);
}

.c9 {
  font-size: 14px;
  color: rgba(38,38,38,0.6);
}

.c7 {
  font-size: 14px;
  color: #1F262D;
  font-weight: 600;
}

.c23 {
  font-size: 14px;
  font-weight: 400;
  line-height: 1.5;
  text-transform: none;
  color: rgba(2,108,223,1);
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: color 0.3s ease;
  transition: color 0.3s ease;
  cursor: pointer;
}

.c23:focus,
.c23:active,
.c23:visited,
.c23:hover {
  color: rgba(2,108,223,1);
}

.c23:hover {
  color: #0150a7;
}

.c4 {
  height: 36px;
  width: 100%;
  min-width: 100px;
  font-weight: 600;
  text-align: center;
  border-radius: 2px;
  color: rgba(255,255,255,1);
  background-color: transparent;
  border: 1px solid rgba(255,255,255,1);
  cursor: pointer;
  text-transform: capitalize;
  font-size: 14px;
  min-width: 45px;
  max-width: 45px;
  height: 45px;
  width: 45px;
}

.c4:disabled {
  color: rgba(255,255,255,0.5);
  background-color: transparent;
  border: 1px solid rgba(255,255,255,0.5);
  cursor: not-allowed;
}

.c4:focus {
  outline: none;
}

.c4 > * {
  pointer-events: none;
}

.c20 {
  height: 36px;
  width: 100%;
  min-width: 100px;
  font-weight: 600;
  text-align: center;
  border-radius: 2px;
  color: rgba(255,255,255,1);
  background-color: transparent;
  border: 1px solid rgba(255,255,255,1);
  cursor: pointer;
  text-transform: capitalize;
  font-size: 14px;
  min-width: 35px;
  max-width: 35px;
  height: 35px;
  width: 35px;
}

.c20:disabled {
  color: rgba(255,255,255,0.5);
  background-color: transparent;
  border: 1px solid rgba(255,255,255,0.5);
  cursor: not-allowed;
}

.c20:focus {
  outline: none;
}

.c20 > * {
  pointer-events: none;
}

.c1 {
  background-color: rgba(255,255,255,1);
}

.c1:not(:last-of-type) {
  border-bottom: 0.5px solid #E0E0E0;
}

.c2 {
  background-color: rgba(255,255,255,1);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 8px;
}

.c3 {
  display: none;
}

.c5 {
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: horizontal;
  -webkit-justify-content: horizontal;
  -ms-flex-pack: horizontal;
  justify-content: horizontal;
  overflow: hidden;
  width: 100%;
  cursor: pointer;
  padding-top: 8px;
  padding-bottom: 8px;
  border-radius: 2px;
  margin: 12px 0 8px 0;
}

.c6 {
  min-width: 101px;
  max-width: 116px;
  padding-left: 8px;
}

.c15 {
  display: none;
}

.c18 {
  font-weight: 600;
  font-size: 14px;
  line-height: 2.43;
  width: 100%;
  padding: 0 12px 0 12px;
  min-width: 60px;
  text-align: center;
  text-transform: capitalize;
  border-radius: 2px;
  cursor: pointer;
  color: rgba(255,255,255,1);
  background-color: #026cdf;
  border: 1px solid transparent;
  -webkit-transition: -webkit-transform 0.1s linear;
  -webkit-transition: transform 0.1s linear;
  transition: transform 0.1s linear;
  -webkit-transition: background-color 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: background-color 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  min-width: 100px;
  max-width: 102px;
  height: 36px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  line-height: 1.4;
  padding: 18px 0 8px 0;
}

.c18:focus {
  outline: none;
  box-shadow: 0 0 5px 0 #026cdf;
}

.c18:hover {
  background-color: #0150a7;
}

.c18:active {
  -webkit-transform: scale(0.98,0.98) translate(0,1px);
  -ms-transform: scale(0.98,0.98) translate(0,1px);
  transform: scale(0.98,0.98) translate(0,1px);
  background-color: #013670;
}

.c18:disabled {
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  color: rgba(255,255,255,1);
  background-color: #026cdf;
  border: 1px solid transparent;
  cursor: not-allowed;
  opacity: 0.2;
}

.c21 {
  padding-left: 8px;
}

.c25 {
  max-height: 0;
  overflow: hidden;
}

.c17 {
  display: none;
  padding-left: 16px;
  padding-right: 8px;
}

.c13 {
  display: -webkit-box;
  overflow: hidden;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
}

.c8 {
  display: -webkit-box;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
  overflow: hidden;
}

.c0 {
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
}

@media screen and (min-width:768px) {
  .c10 {
    margin-left: -12px;
    margin-right: -12px;
  }
}

@media screen and (min-width:768px) {
  .c12 {
    max-width: 100%;
    padding-right: 12px;
    padding-left: 12px;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

@media screen and (min-width:1024px) {
  .c12 {
    max-width: 100%;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

@media screen and (min-width:1440px) {
  .c12 {
    max-width: 100%;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

@media screen and (min-width:768px) {
  .c16 {
    max-width: 50%;
    padding-right: 12px;
    padding-left: 12px;
    -webkit-flex: 0 0 50%;
    -ms-flex: 0 0 50%;
    flex: 0 0 50%;
  }
}

@media screen and (min-width:1024px) {
  .c16 {
    max-width: 50%;
    -webkit-flex: 0 0 50%;
    -ms-flex: 0 0 50%;
    flex: 0 0 50%;
  }
}

@media screen and (min-width:1440px) {
  .c16 {
    max-width: 50%;
    -webkit-flex: 0 0 50%;
    -ms-flex: 0 0 50%;
    flex: 0 0 50%;
  }
}

@media screen and (min-width:768px) {
  .c22 {
    max-width: 83.33333333333334%;
    padding-right: 12px;
    padding-left: 12px;
    -webkit-flex: 0 0 83.33333333333334%;
    -ms-flex: 0 0 83.33333333333334%;
    flex: 0 0 83.33333333333334%;
  }
}

@media screen and (min-width:1024px) {
  .c22 {
    max-width: 87.5%;
    -webkit-flex: 0 0 87.5%;
    -ms-flex: 0 0 87.5%;
    flex: 0 0 87.5%;
  }
}

@media screen and (min-width:1440px) {
  .c22 {
    max-width: 90%;
    -webkit-flex: 0 0 90%;
    -ms-flex: 0 0 90%;
    flex: 0 0 90%;
  }
}

@media screen and (min-width:768px) {
  .c24 {
    max-width: 16.666666666666664%;
    padding-right: 12px;
    padding-left: 12px;
    -webkit-flex: 0 0 16.666666666666664%;
    -ms-flex: 0 0 16.666666666666664%;
    flex: 0 0 16.666666666666664%;
  }
}

@media screen and (min-width:1024px) {
  .c24 {
    max-width: 12.5%;
    -webkit-flex: 0 0 12.5%;
    -ms-flex: 0 0 12.5%;
    flex: 0 0 12.5%;
  }
}

@media screen and (min-width:1440px) {
  .c24 {
    max-width: 10%;
    -webkit-flex: 0 0 10%;
    -ms-flex: 0 0 10%;
    flex: 0 0 10%;
  }
}

@media only screen and (min-width:480px) {
  .c14 {
    font-size: 16px;
  }
}

@media only screen and (min-width:480px) {
  .c7 {
    font-size: 12px;
  }
}

@media screen and (min-width:768px) {
  .c23 {
    font-size: 14px;
  }
}

@media screen and (min-width:1024px) {
  .c23 {
    font-size: 14px;
  }
}

@media screen and (min-width:768px) {
  .c1 {
    border-radius: 4px;
  }

  .c1.row__wrapper--expanded {
    -webkit-transition: box-shadow 0.3s cubic-bezier(0.455,0.03,0.515,0.955),margin-bottom 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
    transition: box-shadow 0.3s cubic-bezier(0.455,0.03,0.515,0.955),margin-bottom 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.01),0 4px 10px 0 rgba(0,0,0,0.19);
    margin-bottom: 12px;
  }

  .c1.row__wrapper--collapsed {
    -webkit-transition: box-shadow 0.3s cubic-bezier(0.55,0.085,0.68,0.53),margin-bottom 0.3s cubic-bezier(0.55,0.085,0.68,0.53);
    transition: box-shadow 0.3s cubic-bezier(0.55,0.085,0.68,0.53),margin-bottom 0.3s cubic-bezier(0.55,0.085,0.68,0.53);
    box-shadow: 0;
    margin-bottom: 0;
  }
}

@media screen and (min-width:768px) {
  .c3 {
    display: block;
  }

  .c3.button--expanded,
  .c3.button--collapsed {
    -webkit-transition: all 0.1s linear;
    transition: all 0.1s linear;
  }

  .c3.button--expanded {
    -webkit-transform: rotate(-180deg);
    -ms-transform: rotate(-180deg);
    transform: rotate(-180deg);
  }
}

@media screen and (min-width:768px) {
  .c5 {
    margin: 18px 0 8px 0;
  }

  .c5:hover {
    background-color: rgba(2,108,223,0.2);
  }
}

@media screen and (min-width:768px) {
  .c15 {
    position: relative;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }

  .c15.column__content--expanded {
    -webkit-transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
    transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
    opacity: 0;
  }

  .c15.column__content--collapsed {
    -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955) 0.2s;
    transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955) 0.2s;
    opacity: 1;
  }
}

@media screen and (min-width:768px) {
  .c11 {
    display: none;
  }
}

@media screen and (min-width:768px) {
  .c21 {
    padding-left: 12px;
  }
}

@media screen and (min-width:768px) {
  .c25 {
    border-top: 0.5px solid #E0E0E0;
  }

  .c25.container__overflow--expanded {
    background-color: rgba(255,255,255,1);
    max-height: 600px;
    -webkit-transition: max-height 0.3s cubic-bezier(0.455,0.03,0.515,0.955),opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955) 0.2s;
    transition: max-height 0.3s cubic-bezier(0.455,0.03,0.515,0.955),opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955) 0.2s;
    opacity: 1;
  }

  .c25.container__overflow--collapsed {
    -webkit-transition: max-height 0.3s cubic-bezier(0.55,0.085,0.68,0.53),opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
    transition: max-height 0.3s cubic-bezier(0.55,0.085,0.68,0.53),opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
    opacity: 0;
  }
}

@media screen and (min-width:768px) {
  .c17 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media screen and (min-width:768px) {
  .c19 {
    display: none;
  }
}

@media screen and (min-width:768px) {
  .c13.subtitle--hidden {
    position: absolute;
    -webkit-transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
    transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
    opacity: 0;
  }

  .c13.subtitle--active {
    -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955) 0.2s;
    transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955) 0.2s;
    opacity: 1;
  }

  .c13.subtitle--expanded {
    -webkit-transform: translateX(-55%);
    -ms-transform: translateX(-55%);
    transform: translateX(-55%);
  }
}

<div
  className="c0"
  onClick={[Function]}
>
  <div
    className="row__wrapper row__wrapper--collapsed c1"
  >
    <div
      className="c2"
    >
      <button
        aria-expanded={false}
        aria-label="Expand Row"
        className="button--expand-or-collapse button--collapsed c3 c4"
        data-index={0}
        role="button"
        size={45}
      >
        <svg
          fill="#1F262D"
          height={15}
          style={Object {}}
          viewBox="0 0 15 7"
          width={15}
        >
          <path
            d="M13.974.132a.614.614 0 0 0-.762 0L7.17 5.341 1.12.132C.916-.044.563-.037.376.125a.398.398 0 0 0-.167.332c0 .058.012.116.036.17a.385.385 0 0 0 .12.155l6.427 5.54a.568.568 0 0 0 .378.135.568.568 0 0 0 .377-.135l6.427-5.54a.422.422 0 0 0 .156-.325.42.42 0 0 0-.156-.325z"
          />
        </svg>
      </button>
      <a
        aria-label="See Tickets"
        className="c5"
        href="/"
        onClick={[Function]}
        role="link"
      >
        <div
          className="c6"
        >
          <div
            className="date--text c7"
            color="#1F262D"
            style={
              Object {
                "textTransform": "uppercase",
              }
            }
          >
            apr 23
          </div>
          <div
            className="day-time--text c8 c9"
          >
            Thu, 8:00 PM
          </div>
        </div>
        <div
          className="c10"
          style={
            Object {
              "width": "100%",
            }
          }
        >
          <div
            className="c11 c12"
          >
            <div
              className="list-row--title c13 c14"
            >
              Del Mar Fairgrounds
            </div>
            <div
              className="list-row--subtitle c8 c9"
            >
              KABOO 3-Day Pass
            </div>
          </div>
          <div
            className="column__content list-row--title column__content--collapsed c15 c16"
          >
            <div
              className="c13 c14"
            >
              Del Mar Fairgrounds
            </div>
          </div>
          <div
            className="c15 c16"
          >
            <div
              className="subtitle list-row--subtitle subtitle--active c13 c14"
            >
              KABOO 3-Day Pass
            </div>
            <div
              className="subtitle subtitle--expanded subtitle--hidden c13 c14"
            >
              KABOO 3-Day Pass
            </div>
          </div>
        </div>
        <div
          className="c17"
        >
          <span
            aria-label="See Tickets"
            className="c18"
            onClick={[Function]}
            role="button"
            size="regular"
            width="102px"
          >
            See Tickets
          </span>
        </div>
      </a>
      <div
        className="c19"
      >
        <button
          aria-label="More Info"
          className="button--more-info c20"
          data-index={0}
          onClick={[Function]}
          role="button"
          size={35}
        >
          <svg
            fill="rgba(38, 38, 38, 0.6)"
            height={22}
            viewBox="0 0 5 21"
            width={22}
          >
            <path
              d="M0 2.5C0 1.81.242 1.22.727.732A2.394 2.394 0 0 1 2.492 0a2.42 2.42 0 0 1 1.773.732C4.755 1.221 5 1.81 5 2.5s-.245 1.28-.735 1.768A2.42 2.42 0 0 1 2.492 5C1.8 5 1.212 4.756.727 4.268A2.418 2.418 0 0 1 0 2.5zm0 8.008c0-.692.242-1.283.727-1.773A2.39 2.39 0 0 1 2.492 8c.692 0 1.283.245 1.773.735S5 9.815 5 10.508a2.39 2.39 0 0 1-.735 1.765A2.43 2.43 0 0 1 2.492 13c-.692 0-1.28-.242-1.765-.727A2.403 2.403 0 0 1 0 10.508zM0 18.5c0-.69.242-1.28.727-1.768A2.394 2.394 0 0 1 2.492 16a2.42 2.42 0 0 1 1.773.732c.49.489.735 1.078.735 1.768s-.245 1.28-.735 1.768A2.42 2.42 0 0 1 2.492 21c-.692 0-1.28-.244-1.765-.732A2.418 2.418 0 0 1 0 18.5z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      className="c21 c10"
    >
      <div
        className="c22"
      >
        <span
          className="c23"
          href=""
          rel="_self"
          size={
            Object {
              "large": "hecto",
              "medium": "hecto",
              "small": "hecto",
            }
          }
          target=""
        >
          Ticket Options Available
        </span>
      </div>
      <div
        className="c24"
      >
        <div
          className="c9"
        >
          on Partner Site
        </div>
      </div>
    </div>
    <div
      className="container__overflow container__overflow--collapsed c25 c12"
    />
  </div>
</div>
`;

exports[`<ListRow /> renders List Row with variant withLink correctly 1`] = `
.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-sizing: border-box;
  margin-left: -8px;
  margin-right: -8px;
}

.c10 .c10 {
  -webkit-flex: 0 1 100%;
  -ms-flex: 0 1 100%;
  flex: 0 1 100%;
  margin-left: 0;
  margin-right: 0;
}

.c12 {
  box-sizing: border-box;
  padding-right: 8px;
  padding-left: 8px;
  max-width: 100%;
  -webkit-flex: 0 0 100%;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
}

.c16 {
  box-sizing: border-box;
  padding-right: 8px;
  padding-left: 8px;
  max-width: 100%;
  -webkit-flex: 0 0 100%;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
}

.c22 {
  box-sizing: border-box;
  padding-right: 8px;
  padding-left: 8px;
  max-width: 75%;
  -webkit-flex: 0 0 75%;
  -ms-flex: 0 0 75%;
  flex: 0 0 75%;
}

.c24 {
  box-sizing: border-box;
  padding-right: 8px;
  padding-left: 8px;
  max-width: 25%;
  -webkit-flex: 0 0 25%;
  -ms-flex: 0 0 25%;
  flex: 0 0 25%;
}

.c14 {
  font-size: 14px;
  color: rgba(38,38,38,1);
}

.c9 {
  font-size: 14px;
  color: rgba(38,38,38,0.6);
}

.c7 {
  font-size: 14px;
  color: #1F262D;
  font-weight: 600;
}

.c23 {
  font-size: 14px;
  font-weight: 400;
  line-height: 1.5;
  text-transform: none;
  color: rgba(2,108,223,1);
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: color 0.3s ease;
  transition: color 0.3s ease;
}

.c23:focus,
.c23:active,
.c23:visited,
.c23:hover {
  color: rgba(2,108,223,1);
}

.c23:hover {
  color: #0150a7;
}

.c4 {
  height: 36px;
  width: 100%;
  min-width: 100px;
  font-weight: 600;
  text-align: center;
  border-radius: 2px;
  color: rgba(255,255,255,1);
  background-color: transparent;
  border: 1px solid rgba(255,255,255,1);
  cursor: pointer;
  text-transform: capitalize;
  font-size: 14px;
  min-width: 45px;
  max-width: 45px;
  height: 45px;
  width: 45px;
}

.c4:disabled {
  color: rgba(255,255,255,0.5);
  background-color: transparent;
  border: 1px solid rgba(255,255,255,0.5);
  cursor: not-allowed;
}

.c4:focus {
  outline: none;
}

.c4 > * {
  pointer-events: none;
}

.c20 {
  height: 36px;
  width: 100%;
  min-width: 100px;
  font-weight: 600;
  text-align: center;
  border-radius: 2px;
  color: rgba(255,255,255,1);
  background-color: transparent;
  border: 1px solid rgba(255,255,255,1);
  cursor: pointer;
  text-transform: capitalize;
  font-size: 14px;
  min-width: 35px;
  max-width: 35px;
  height: 35px;
  width: 35px;
}

.c20:disabled {
  color: rgba(255,255,255,0.5);
  background-color: transparent;
  border: 1px solid rgba(255,255,255,0.5);
  cursor: not-allowed;
}

.c20:focus {
  outline: none;
}

.c20 > * {
  pointer-events: none;
}

.c1 {
  background-color: rgba(255,255,255,1);
}

.c1:not(:last-of-type) {
  border-bottom: 0.5px solid #E0E0E0;
}

.c2 {
  background-color: rgba(255,255,255,1);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 8px;
}

.c3 {
  display: none;
}

.c5 {
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: horizontal;
  -webkit-justify-content: horizontal;
  -ms-flex-pack: horizontal;
  justify-content: horizontal;
  overflow: hidden;
  width: 100%;
  cursor: pointer;
  padding-top: 8px;
  padding-bottom: 8px;
  border-radius: 2px;
  margin: 12px 0 8px 0;
}

.c6 {
  min-width: 101px;
  max-width: 116px;
  padding-left: 8px;
}

.c15 {
  display: none;
}

.c18 {
  font-weight: 600;
  font-size: 14px;
  line-height: 2.43;
  width: 100%;
  padding: 0 12px 0 12px;
  min-width: 60px;
  text-align: center;
  text-transform: capitalize;
  border-radius: 2px;
  cursor: pointer;
  color: rgba(255,255,255,1);
  background-color: #026cdf;
  border: 1px solid transparent;
  -webkit-transition: -webkit-transform 0.1s linear;
  -webkit-transition: transform 0.1s linear;
  transition: transform 0.1s linear;
  -webkit-transition: background-color 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: background-color 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  min-width: 100px;
  max-width: 102px;
  height: 36px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  line-height: 1.4;
  padding: 18px 0 8px 0;
}

.c18:focus {
  outline: none;
  box-shadow: 0 0 5px 0 #026cdf;
}

.c18:hover {
  background-color: #0150a7;
}

.c18:active {
  -webkit-transform: scale(0.98,0.98) translate(0,1px);
  -ms-transform: scale(0.98,0.98) translate(0,1px);
  transform: scale(0.98,0.98) translate(0,1px);
  background-color: #013670;
}

.c18:disabled {
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  color: rgba(255,255,255,1);
  background-color: #026cdf;
  border: 1px solid transparent;
  cursor: not-allowed;
  opacity: 0.2;
}

.c21 {
  padding-left: 8px;
}

.c25 {
  max-height: 0;
  overflow: hidden;
}

.c17 {
  display: none;
  padding-left: 16px;
  padding-right: 8px;
}

.c13 {
  display: -webkit-box;
  overflow: hidden;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
}

.c8 {
  display: -webkit-box;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
  overflow: hidden;
}

.c0 {
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
}

@media screen and (min-width:768px) {
  .c10 {
    margin-left: -12px;
    margin-right: -12px;
  }
}

@media screen and (min-width:768px) {
  .c12 {
    max-width: 100%;
    padding-right: 12px;
    padding-left: 12px;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

@media screen and (min-width:1024px) {
  .c12 {
    max-width: 100%;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

@media screen and (min-width:1440px) {
  .c12 {
    max-width: 100%;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

@media screen and (min-width:768px) {
  .c16 {
    max-width: 50%;
    padding-right: 12px;
    padding-left: 12px;
    -webkit-flex: 0 0 50%;
    -ms-flex: 0 0 50%;
    flex: 0 0 50%;
  }
}

@media screen and (min-width:1024px) {
  .c16 {
    max-width: 50%;
    -webkit-flex: 0 0 50%;
    -ms-flex: 0 0 50%;
    flex: 0 0 50%;
  }
}

@media screen and (min-width:1440px) {
  .c16 {
    max-width: 50%;
    -webkit-flex: 0 0 50%;
    -ms-flex: 0 0 50%;
    flex: 0 0 50%;
  }
}

@media screen and (min-width:768px) {
  .c22 {
    max-width: 83.33333333333334%;
    padding-right: 12px;
    padding-left: 12px;
    -webkit-flex: 0 0 83.33333333333334%;
    -ms-flex: 0 0 83.33333333333334%;
    flex: 0 0 83.33333333333334%;
  }
}

@media screen and (min-width:1024px) {
  .c22 {
    max-width: 87.5%;
    -webkit-flex: 0 0 87.5%;
    -ms-flex: 0 0 87.5%;
    flex: 0 0 87.5%;
  }
}

@media screen and (min-width:1440px) {
  .c22 {
    max-width: 90%;
    -webkit-flex: 0 0 90%;
    -ms-flex: 0 0 90%;
    flex: 0 0 90%;
  }
}

@media screen and (min-width:768px) {
  .c24 {
    max-width: 16.666666666666664%;
    padding-right: 12px;
    padding-left: 12px;
    -webkit-flex: 0 0 16.666666666666664%;
    -ms-flex: 0 0 16.666666666666664%;
    flex: 0 0 16.666666666666664%;
  }
}

@media screen and (min-width:1024px) {
  .c24 {
    max-width: 12.5%;
    -webkit-flex: 0 0 12.5%;
    -ms-flex: 0 0 12.5%;
    flex: 0 0 12.5%;
  }
}

@media screen and (min-width:1440px) {
  .c24 {
    max-width: 10%;
    -webkit-flex: 0 0 10%;
    -ms-flex: 0 0 10%;
    flex: 0 0 10%;
  }
}

@media only screen and (min-width:480px) {
  .c14 {
    font-size: 16px;
  }
}

@media only screen and (min-width:480px) {
  .c7 {
    font-size: 12px;
  }
}

@media screen and (min-width:768px) {
  .c23 {
    font-size: 14px;
  }
}

@media screen and (min-width:1024px) {
  .c23 {
    font-size: 14px;
  }
}

@media screen and (min-width:768px) {
  .c1 {
    border-radius: 4px;
  }

  .c1.row__wrapper--expanded {
    -webkit-transition: box-shadow 0.3s cubic-bezier(0.455,0.03,0.515,0.955),margin-bottom 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
    transition: box-shadow 0.3s cubic-bezier(0.455,0.03,0.515,0.955),margin-bottom 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.01),0 4px 10px 0 rgba(0,0,0,0.19);
    margin-bottom: 12px;
  }

  .c1.row__wrapper--collapsed {
    -webkit-transition: box-shadow 0.3s cubic-bezier(0.55,0.085,0.68,0.53),margin-bottom 0.3s cubic-bezier(0.55,0.085,0.68,0.53);
    transition: box-shadow 0.3s cubic-bezier(0.55,0.085,0.68,0.53),margin-bottom 0.3s cubic-bezier(0.55,0.085,0.68,0.53);
    box-shadow: 0;
    margin-bottom: 0;
  }
}

@media screen and (min-width:768px) {
  .c3 {
    display: block;
  }

  .c3.button--expanded,
  .c3.button--collapsed {
    -webkit-transition: all 0.1s linear;
    transition: all 0.1s linear;
  }

  .c3.button--expanded {
    -webkit-transform: rotate(-180deg);
    -ms-transform: rotate(-180deg);
    transform: rotate(-180deg);
  }
}

@media screen and (min-width:768px) {
  .c5 {
    margin: 18px 0 8px 0;
  }

  .c5:hover {
    background-color: rgba(2,108,223,0.2);
  }
}

@media screen and (min-width:768px) {
  .c15 {
    position: relative;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }

  .c15.column__content--expanded {
    -webkit-transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
    transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
    opacity: 0;
  }

  .c15.column__content--collapsed {
    -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955) 0.2s;
    transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955) 0.2s;
    opacity: 1;
  }
}

@media screen and (min-width:768px) {
  .c11 {
    display: none;
  }
}

@media screen and (min-width:768px) {
  .c21 {
    padding-left: 12px;
  }
}

@media screen and (min-width:768px) {
  .c25 {
    border-top: 0.5px solid #E0E0E0;
  }

  .c25.container__overflow--expanded {
    background-color: rgba(255,255,255,1);
    max-height: 600px;
    -webkit-transition: max-height 0.3s cubic-bezier(0.455,0.03,0.515,0.955),opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955) 0.2s;
    transition: max-height 0.3s cubic-bezier(0.455,0.03,0.515,0.955),opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955) 0.2s;
    opacity: 1;
  }

  .c25.container__overflow--collapsed {
    -webkit-transition: max-height 0.3s cubic-bezier(0.55,0.085,0.68,0.53),opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
    transition: max-height 0.3s cubic-bezier(0.55,0.085,0.68,0.53),opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
    opacity: 0;
  }
}

@media screen and (min-width:768px) {
  .c17 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media screen and (min-width:768px) {
  .c19 {
    display: none;
  }
}

@media screen and (min-width:768px) {
  .c13.subtitle--hidden {
    position: absolute;
    -webkit-transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
    transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
    opacity: 0;
  }

  .c13.subtitle--active {
    -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955) 0.2s;
    transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955) 0.2s;
    opacity: 1;
  }

  .c13.subtitle--expanded {
    -webkit-transform: translateX(-55%);
    -ms-transform: translateX(-55%);
    transform: translateX(-55%);
  }
}

<div
  className="c0"
  onClick={[Function]}
>
  <div
    className="row__wrapper row__wrapper--collapsed c1"
  >
    <div
      className="c2"
    >
      <button
        aria-expanded={false}
        aria-label="Expand Row"
        className="button--expand-or-collapse button--collapsed c3 c4"
        data-index={0}
        role="button"
        size={45}
      >
        <svg
          fill="#1F262D"
          height={15}
          style={Object {}}
          viewBox="0 0 15 7"
          width={15}
        >
          <path
            d="M13.974.132a.614.614 0 0 0-.762 0L7.17 5.341 1.12.132C.916-.044.563-.037.376.125a.398.398 0 0 0-.167.332c0 .058.012.116.036.17a.385.385 0 0 0 .12.155l6.427 5.54a.568.568 0 0 0 .378.135.568.568 0 0 0 .377-.135l6.427-5.54a.422.422 0 0 0 .156-.325.42.42 0 0 0-.156-.325z"
          />
        </svg>
      </button>
      <a
        aria-label="See Tickets"
        className="c5"
        href="/"
        onClick={[Function]}
        role="link"
      >
        <div
          className="c6"
        >
          <div
            className="date--text c7"
            color="#1F262D"
            style={
              Object {
                "textTransform": "uppercase",
              }
            }
          >
            apr 23
          </div>
          <div
            className="day-time--text c8 c9"
          >
            Thu, 8:00 PM
          </div>
        </div>
        <div
          className="c10"
          style={
            Object {
              "width": "100%",
            }
          }
        >
          <div
            className="c11 c12"
          >
            <div
              className="list-row--title c13 c14"
            >
              Del Mar Fairgrounds
            </div>
            <div
              className="list-row--subtitle c8 c9"
            >
              KABOO 3-Day Pass
            </div>
          </div>
          <div
            className="column__content list-row--title column__content--collapsed c15 c16"
          >
            <div
              className="c13 c14"
            >
              Del Mar Fairgrounds
            </div>
          </div>
          <div
            className="c15 c16"
          >
            <div
              className="subtitle list-row--subtitle subtitle--active c13 c14"
            >
              KABOO 3-Day Pass
            </div>
            <div
              className="subtitle subtitle--expanded subtitle--hidden c13 c14"
            >
              KABOO 3-Day Pass
            </div>
          </div>
        </div>
        <div
          className="c17"
        >
          <span
            aria-label="See Tickets"
            className="c18"
            onClick={[Function]}
            role="button"
            size="regular"
            width="102px"
          >
            See Tickets
          </span>
        </div>
      </a>
      <div
        className="c19"
      >
        <button
          aria-label="More Info"
          className="button--more-info c20"
          data-index={0}
          onClick={[Function]}
          role="button"
          size={35}
        >
          <svg
            fill="rgba(38, 38, 38, 0.6)"
            height={22}
            viewBox="0 0 5 21"
            width={22}
          >
            <path
              d="M0 2.5C0 1.81.242 1.22.727.732A2.394 2.394 0 0 1 2.492 0a2.42 2.42 0 0 1 1.773.732C4.755 1.221 5 1.81 5 2.5s-.245 1.28-.735 1.768A2.42 2.42 0 0 1 2.492 5C1.8 5 1.212 4.756.727 4.268A2.418 2.418 0 0 1 0 2.5zm0 8.008c0-.692.242-1.283.727-1.773A2.39 2.39 0 0 1 2.492 8c.692 0 1.283.245 1.773.735S5 9.815 5 10.508a2.39 2.39 0 0 1-.735 1.765A2.43 2.43 0 0 1 2.492 13c-.692 0-1.28-.242-1.765-.727A2.403 2.403 0 0 1 0 10.508zM0 18.5c0-.69.242-1.28.727-1.768A2.394 2.394 0 0 1 2.492 16a2.42 2.42 0 0 1 1.773.732c.49.489.735 1.078.735 1.768s-.245 1.28-.735 1.768A2.42 2.42 0 0 1 2.492 21c-.692 0-1.28-.244-1.765-.732A2.418 2.418 0 0 1 0 18.5z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      className="c21 c10"
    >
      <div
        className="c22"
      >
        <a
          className="c23"
          href="/"
          rel="_self"
          size={
            Object {
              "large": "hecto",
              "medium": "hecto",
              "small": "hecto",
            }
          }
          target=""
        >
          Ticket options available
        </a>
      </div>
      <div
        className="c24"
      >
        <div
          className="c9"
        >
          click here
        </div>
      </div>
    </div>
    <div
      className="container__overflow container__overflow--collapsed c25 c12"
    />
  </div>
</div>
`;

exports[`<ListRow /> renders standard List Row correctly 1`] = `
.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-sizing: border-box;
  margin-left: -8px;
  margin-right: -8px;
}

.c10 .c10 {
  -webkit-flex: 0 1 100%;
  -ms-flex: 0 1 100%;
  flex: 0 1 100%;
  margin-left: 0;
  margin-right: 0;
}

.c12 {
  box-sizing: border-box;
  padding-right: 8px;
  padding-left: 8px;
  max-width: 100%;
  -webkit-flex: 0 0 100%;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
}

.c16 {
  box-sizing: border-box;
  padding-right: 8px;
  padding-left: 8px;
  max-width: 100%;
  -webkit-flex: 0 0 100%;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
}

.c14 {
  font-size: 14px;
  color: rgba(38,38,38,1);
}

.c9 {
  font-size: 14px;
  color: rgba(38,38,38,0.6);
}

.c7 {
  font-size: 14px;
  color: #1F262D;
  font-weight: 600;
}

.c4 {
  height: 36px;
  width: 100%;
  min-width: 100px;
  font-weight: 600;
  text-align: center;
  border-radius: 2px;
  color: rgba(255,255,255,1);
  background-color: transparent;
  border: 1px solid rgba(255,255,255,1);
  cursor: pointer;
  text-transform: capitalize;
  font-size: 14px;
  min-width: 45px;
  max-width: 45px;
  height: 45px;
  width: 45px;
}

.c4:disabled {
  color: rgba(255,255,255,0.5);
  background-color: transparent;
  border: 1px solid rgba(255,255,255,0.5);
  cursor: not-allowed;
}

.c4:focus {
  outline: none;
}

.c4 > * {
  pointer-events: none;
}

.c20 {
  height: 36px;
  width: 100%;
  min-width: 100px;
  font-weight: 600;
  text-align: center;
  border-radius: 2px;
  color: rgba(255,255,255,1);
  background-color: transparent;
  border: 1px solid rgba(255,255,255,1);
  cursor: pointer;
  text-transform: capitalize;
  font-size: 14px;
  min-width: 35px;
  max-width: 35px;
  height: 35px;
  width: 35px;
}

.c20:disabled {
  color: rgba(255,255,255,0.5);
  background-color: transparent;
  border: 1px solid rgba(255,255,255,0.5);
  cursor: not-allowed;
}

.c20:focus {
  outline: none;
}

.c20 > * {
  pointer-events: none;
}

.c1 {
  background-color: rgba(255,255,255,1);
}

.c1:not(:last-of-type) {
  border-bottom: 0.5px solid #E0E0E0;
}

.c2 {
  background-color: rgba(255,255,255,1);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 8px;
}

.c3 {
  display: none;
}

.c5 {
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: horizontal;
  -webkit-justify-content: horizontal;
  -ms-flex-pack: horizontal;
  justify-content: horizontal;
  overflow: hidden;
  width: 100%;
  cursor: pointer;
  padding-top: 8px;
  padding-bottom: 8px;
  border-radius: 2px;
  margin: 12px 0 12px 0;
}

.c6 {
  min-width: 101px;
  max-width: 116px;
  padding-left: 8px;
}

.c15 {
  display: none;
}

.c18 {
  font-weight: 600;
  font-size: 14px;
  line-height: 2.43;
  width: 100%;
  padding: 0 12px 0 12px;
  min-width: 60px;
  text-align: center;
  text-transform: capitalize;
  border-radius: 2px;
  cursor: pointer;
  color: rgba(255,255,255,1);
  background-color: #026cdf;
  border: 1px solid transparent;
  -webkit-transition: -webkit-transform 0.1s linear;
  -webkit-transition: transform 0.1s linear;
  transition: transform 0.1s linear;
  -webkit-transition: background-color 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: background-color 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  min-width: 100px;
  max-width: 102px;
  height: 36px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  line-height: 1.4;
  padding: 18px 0 18px 0;
}

.c18:focus {
  outline: none;
  box-shadow: 0 0 5px 0 #026cdf;
}

.c18:hover {
  background-color: #0150a7;
}

.c18:active {
  -webkit-transform: scale(0.98,0.98) translate(0,1px);
  -ms-transform: scale(0.98,0.98) translate(0,1px);
  transform: scale(0.98,0.98) translate(0,1px);
  background-color: #013670;
}

.c18:disabled {
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  color: rgba(255,255,255,1);
  background-color: #026cdf;
  border: 1px solid transparent;
  cursor: not-allowed;
  opacity: 0.2;
}

.c21 {
  max-height: 0;
  overflow: hidden;
}

.c17 {
  display: none;
  padding-left: 16px;
  padding-right: 8px;
}

.c13 {
  display: -webkit-box;
  overflow: hidden;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
}

.c8 {
  display: -webkit-box;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
  overflow: hidden;
}

.c0 {
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
}

@media screen and (min-width:768px) {
  .c10 {
    margin-left: -12px;
    margin-right: -12px;
  }
}

@media screen and (min-width:768px) {
  .c12 {
    max-width: 100%;
    padding-right: 12px;
    padding-left: 12px;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

@media screen and (min-width:1024px) {
  .c12 {
    max-width: 100%;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

@media screen and (min-width:1440px) {
  .c12 {
    max-width: 100%;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

@media screen and (min-width:768px) {
  .c16 {
    max-width: 50%;
    padding-right: 12px;
    padding-left: 12px;
    -webkit-flex: 0 0 50%;
    -ms-flex: 0 0 50%;
    flex: 0 0 50%;
  }
}

@media screen and (min-width:1024px) {
  .c16 {
    max-width: 50%;
    -webkit-flex: 0 0 50%;
    -ms-flex: 0 0 50%;
    flex: 0 0 50%;
  }
}

@media screen and (min-width:1440px) {
  .c16 {
    max-width: 50%;
    -webkit-flex: 0 0 50%;
    -ms-flex: 0 0 50%;
    flex: 0 0 50%;
  }
}

@media only screen and (min-width:480px) {
  .c14 {
    font-size: 16px;
  }
}

@media only screen and (min-width:480px) {
  .c7 {
    font-size: 12px;
  }
}

@media screen and (min-width:768px) {
  .c1 {
    border-radius: 4px;
  }

  .c1.row__wrapper--expanded {
    -webkit-transition: box-shadow 0.3s cubic-bezier(0.455,0.03,0.515,0.955),margin-bottom 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
    transition: box-shadow 0.3s cubic-bezier(0.455,0.03,0.515,0.955),margin-bottom 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.01),0 4px 10px 0 rgba(0,0,0,0.19);
    margin-bottom: 12px;
  }

  .c1.row__wrapper--collapsed {
    -webkit-transition: box-shadow 0.3s cubic-bezier(0.55,0.085,0.68,0.53),margin-bottom 0.3s cubic-bezier(0.55,0.085,0.68,0.53);
    transition: box-shadow 0.3s cubic-bezier(0.55,0.085,0.68,0.53),margin-bottom 0.3s cubic-bezier(0.55,0.085,0.68,0.53);
    box-shadow: 0;
    margin-bottom: 0;
  }
}

@media screen and (min-width:768px) {
  .c3 {
    display: block;
  }

  .c3.button--expanded,
  .c3.button--collapsed {
    -webkit-transition: all 0.1s linear;
    transition: all 0.1s linear;
  }

  .c3.button--expanded {
    -webkit-transform: rotate(-180deg);
    -ms-transform: rotate(-180deg);
    transform: rotate(-180deg);
  }
}

@media screen and (min-width:768px) {
  .c5 {
    margin: 18px 0 18px 0;
  }

  .c5:hover {
    background-color: rgba(2,108,223,0.2);
  }
}

@media screen and (min-width:768px) {
  .c15 {
    position: relative;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }

  .c15.column__content--expanded {
    -webkit-transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
    transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
    opacity: 0;
  }

  .c15.column__content--collapsed {
    -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955) 0.2s;
    transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955) 0.2s;
    opacity: 1;
  }
}

@media screen and (min-width:768px) {
  .c11 {
    display: none;
  }
}

@media screen and (min-width:768px) {
  .c21 {
    border-top: 0.5px solid #E0E0E0;
  }

  .c21.container__overflow--expanded {
    background-color: rgba(255,255,255,1);
    max-height: 600px;
    -webkit-transition: max-height 0.3s cubic-bezier(0.455,0.03,0.515,0.955),opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955) 0.2s;
    transition: max-height 0.3s cubic-bezier(0.455,0.03,0.515,0.955),opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955) 0.2s;
    opacity: 1;
  }

  .c21.container__overflow--collapsed {
    -webkit-transition: max-height 0.3s cubic-bezier(0.55,0.085,0.68,0.53),opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
    transition: max-height 0.3s cubic-bezier(0.55,0.085,0.68,0.53),opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
    opacity: 0;
  }
}

@media screen and (min-width:768px) {
  .c17 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media screen and (min-width:768px) {
  .c19 {
    display: none;
  }
}

@media screen and (min-width:768px) {
  .c13.subtitle--hidden {
    position: absolute;
    -webkit-transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
    transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
    opacity: 0;
  }

  .c13.subtitle--active {
    -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955) 0.2s;
    transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955) 0.2s;
    opacity: 1;
  }

  .c13.subtitle--expanded {
    -webkit-transform: translateX(-55%);
    -ms-transform: translateX(-55%);
    transform: translateX(-55%);
  }
}

<div
  className="c0"
  onClick={[Function]}
>
  <div
    className="row__wrapper row__wrapper--collapsed c1"
  >
    <div
      className="c2"
    >
      <button
        aria-expanded={false}
        aria-label="Expand Row"
        className="button--expand-or-collapse button--collapsed c3 c4"
        data-index={0}
        role="button"
        size={45}
      >
        <svg
          fill="#1F262D"
          height={15}
          style={Object {}}
          viewBox="0 0 15 7"
          width={15}
        >
          <path
            d="M13.974.132a.614.614 0 0 0-.762 0L7.17 5.341 1.12.132C.916-.044.563-.037.376.125a.398.398 0 0 0-.167.332c0 .058.012.116.036.17a.385.385 0 0 0 .12.155l6.427 5.54a.568.568 0 0 0 .378.135.568.568 0 0 0 .377-.135l6.427-5.54a.422.422 0 0 0 .156-.325.42.42 0 0 0-.156-.325z"
          />
        </svg>
      </button>
      <a
        aria-label="See Tickets"
        className="c5"
        href="/"
        onClick={[Function]}
        role="link"
      >
        <div
          className="c6"
        >
          <div
            className="date--text c7"
            color="#1F262D"
            style={
              Object {
                "textTransform": "uppercase",
              }
            }
          >
            apr 23
          </div>
          <div
            className="day-time--text c8 c9"
          >
            Thu, 8:00 PM
          </div>
        </div>
        <div
          className="c10"
          style={
            Object {
              "width": "100%",
            }
          }
        >
          <div
            className="c11 c12"
          >
            <div
              className="list-row--title c13 c14"
            >
              Del Mar Fairgrounds
            </div>
            <div
              className="list-row--subtitle c8 c9"
            >
              KABOO 3-Day Pass
            </div>
          </div>
          <div
            className="column__content list-row--title column__content--collapsed c15 c16"
          >
            <div
              className="c13 c14"
            >
              Del Mar Fairgrounds
            </div>
          </div>
          <div
            className="c15 c16"
          >
            <div
              className="subtitle list-row--subtitle subtitle--active c13 c14"
            >
              KABOO 3-Day Pass
            </div>
            <div
              className="subtitle subtitle--expanded subtitle--hidden c13 c14"
            >
              KABOO 3-Day Pass
            </div>
          </div>
        </div>
        <div
          className="c17"
        >
          <span
            aria-label="See Tickets"
            className="c18"
            onClick={[Function]}
            role="button"
            size="regular"
            width="102px"
          >
            See Tickets
          </span>
        </div>
      </a>
      <div
        className="c19"
      >
        <button
          aria-label="More Info"
          className="button--more-info c20"
          data-index={0}
          onClick={[Function]}
          role="button"
          size={35}
        >
          <svg
            fill="rgba(38, 38, 38, 0.6)"
            height={22}
            viewBox="0 0 5 21"
            width={22}
          >
            <path
              d="M0 2.5C0 1.81.242 1.22.727.732A2.394 2.394 0 0 1 2.492 0a2.42 2.42 0 0 1 1.773.732C4.755 1.221 5 1.81 5 2.5s-.245 1.28-.735 1.768A2.42 2.42 0 0 1 2.492 5C1.8 5 1.212 4.756.727 4.268A2.418 2.418 0 0 1 0 2.5zm0 8.008c0-.692.242-1.283.727-1.773A2.39 2.39 0 0 1 2.492 8c.692 0 1.283.245 1.773.735S5 9.815 5 10.508a2.39 2.39 0 0 1-.735 1.765A2.43 2.43 0 0 1 2.492 13c-.692 0-1.28-.242-1.765-.727A2.403 2.403 0 0 1 0 10.508zM0 18.5c0-.69.242-1.28.727-1.768A2.394 2.394 0 0 1 2.492 16a2.42 2.42 0 0 1 1.773.732c.49.489.735 1.078.735 1.768s-.245 1.28-.735 1.768A2.42 2.42 0 0 1 2.492 21c-.692 0-1.28-.244-1.765-.732A2.418 2.418 0 0 1 0 18.5z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      className="container__overflow container__overflow--collapsed c21 c12"
    />
  </div>
</div>
`;
